Importamos google maps.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <script type="text/javascript" src="js/cordovaEvents.js"></script>-->
    
   <script data-main="js/main" src="js/libs/require/require.js"></script>
-  <!--<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>-->
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 </head>
 <body>
   <div class="see container_16"></div>
